# aoc2021

./: LICENSE  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day05_hashtbl.ml  day06.ml  day07.ml  day08.ml  dune
