(executable
 (name day01)
 (modules day01)
 (libraries core stdio core_bench re))

(executable
 (name day02)
 (modules day02)
 (libraries core stdio core_bench re))

(executable
 (name day03)
 (modules day03)
 (libraries stdlib core stdio core_bench re))

(executable
 (name day04)
 (modules day04)
 (libraries core stdio core_bench re))

(executable
 (name day05)
 (modules day05)
 (libraries core stdio core_bench re)
 (preprocess (pps ppx_jane)))

(executable
 (name day05_hashtbl)
 (modules day05_hashtbl)
 (libraries core stdio core_bench re)
 (preprocess (pps ppx_jane)))

(executable
 (name day06)
 (modules day06)
 (libraries core stdio core_bench re)
 (preprocess (pps ppx_jane)))

(executable
 (name day07)
 (modules day07)
 (libraries core stdio core_bench re)
 (preprocess (pps ppx_jane)))

(executable
 (name day08)
 (modules day08)
 (libraries core stdio core_bench re)
 (preprocess (pps ppx_jane)))